force-app/main/default/objects/QuestionResponse__c/QuestionResponse__c.object-meta.xml
<CustomObject>
    <label>QuestionResponse</label>
    <nameField>
        <label>QuestionResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuestionResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>