force-app/main/default/objects/QuestionResponse__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>Option__c</referenceTo>
    <relationshipLabel>QuestionResponses</relationshipLabel>
    <relationshipName>QuestionResponses</relationshipName>
    <type>Lookup</type>
</CustomField>