force-app/main/default/objects/QuestionResponse__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>QuestionResponses</relationshipLabel>
    <relationshipName>QuestionResponses</relationshipName>
    <type>Lookup</type>
</CustomField>