force-app/main/default/objects/QuestionResponse__c/fields/UnitResponse__c.field-meta.xml
<CustomField>
    <fullName>UnitResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnitResponse</label>
    <referenceTo>UnitResponse__c</referenceTo>
    <relationshipLabel>QuestionResponses</relationshipLabel>
    <relationshipName>QuestionResponses</relationshipName>
    <type>Lookup</type>
</CustomField>